added pyjulia to jupyter notebook

--- a/single_capital.ipynb
+++ b/single_capital.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-06T15:52:48.163000-06:00",
@@ -34,18 +34,49 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Project.toml`\n",
+      "\u001b[90m [no changes]\u001b[39m\n",
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Manifest.toml`\n",
+      "\u001b[90m [no changes]\u001b[39m\n",
+      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Project.toml`\n",
+      "\u001b[90m [no changes]\u001b[39m\n",
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Manifest.toml`\n",
+      "\u001b[90m [no changes]\u001b[39m\n",
+      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Project.toml`\n",
+      "\u001b[90m [no changes]\u001b[39m\n",
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Manifest.toml`\n",
+      "\u001b[90m [no changes]\u001b[39m\n",
+      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Project.toml`\n",
+      "\u001b[90m [no changes]\u001b[39m\n",
+      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Manifest.toml`\n",
+      "\u001b[90m [no changes]\u001b[39m\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "shock_price (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Import Necessary packages\n",
+    "# Install and import Necessary packages\n",
+    "using Pkg\n",
+    "Pkg.add(\"Optim\")\n",
+    "Pkg.add(\"Roots\")\n",
+    "Pkg.add(\"NPZ\")\n",
+    "Pkg.add(\"Interpolations\")\n",
     "using Optim\n",
     "using Roots\n",
     "using NPZ\n",
@@ -125,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-06T15:52:36.972000-06:00",
