Add animations to Figure 4 and 6

--- a/main.ipynb
+++ b/main.ipynb
@@ -28,8 +28,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T06:59:18.016004Z",
-     "start_time": "2020-01-16T06:59:18.006065Z"
+     "end_time": "2020-01-17T07:20:45.817185Z",
+     "start_time": "2020-01-17T07:20:42.886979Z"
     }
    },
    "outputs": [],
@@ -157,8 +157,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T06:59:25.593258Z",
-     "start_time": "2020-01-16T06:59:24.303674Z"
+     "end_time": "2020-01-17T07:20:47.732043Z",
+     "start_time": "2020-01-17T07:20:45.819131Z"
     }
    },
    "outputs": [],
@@ -208,8 +208,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T07:00:04.969584Z",
-     "start_time": "2020-01-16T07:00:02.532496Z"
+     "end_time": "2020-01-17T07:20:50.864668Z",
+     "start_time": "2020-01-17T07:20:47.737031Z"
     },
     "scrolled": false
    },
@@ -449,8 +449,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T06:13:17.157029Z",
-     "start_time": "2020-01-16T06:13:16.686315Z"
+     "end_time": "2020-01-17T07:20:51.529887Z",
+     "start_time": "2020-01-17T07:20:50.866662Z"
     },
     "scrolled": false
    },
@@ -662,13 +662,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T07:01:18.820480Z",
-     "start_time": "2020-01-16T07:01:15.710328Z"
+     "end_time": "2020-01-17T07:20:55.867286Z",
+     "start_time": "2020-01-17T07:20:51.531883Z"
     }
    },
    "outputs": [],
    "source": [
-    "p.ex_post_plot()"
+    "p.ex_post_animation()"
    ]
   },
   {
@@ -705,13 +705,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T07:01:58.610399Z",
-     "start_time": "2020-01-16T07:01:56.467131Z"
-    }
+     "end_time": "2020-01-17T07:20:59.204977Z",
+     "start_time": "2020-01-17T07:20:55.869281Z"
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "p.ex_ante_plot()"
+    "p.ex_ante_animation()"
    ]
   },
   {
@@ -750,8 +751,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T06:13:33.495026Z",
-     "start_time": "2020-01-16T06:13:23.416288Z"
+     "end_time": "2020-01-17T07:21:09.663003Z",
+     "start_time": "2020-01-17T07:20:59.207967Z"
     }
    },
    "outputs": [],
@@ -773,8 +774,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T06:13:37.350293Z",
-     "start_time": "2020-01-16T06:13:33.498020Z"
+     "end_time": "2020-01-17T07:21:14.436237Z",
+     "start_time": "2020-01-17T07:21:09.666993Z"
     }
    },
    "outputs": [],
@@ -828,8 +829,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T06:13:37.789730Z",
-     "start_time": "2020-01-16T06:13:37.352537Z"
+     "end_time": "2020-01-17T07:21:15.172296Z",
+     "start_time": "2020-01-17T07:21:14.439266Z"
     },
     "scrolled": false
    },
@@ -877,8 +878,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-16T06:13:39.603902Z",
-     "start_time": "2020-01-16T06:13:37.790690Z"
+     "end_time": "2020-01-17T07:21:17.019334Z",
+     "start_time": "2020-01-17T07:21:15.174265Z"
     }
    },
    "outputs": [],
