Finished all sliders

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,12 +5,11 @@
    "metadata": {},
    "source": [
     "# Twisted Probabilities, Uncerntainty, and Prices\n",
-    "by [Lars Peter Hansen](https://larspeterhansen.org/), [Bálint Szőke](https://www.balintszoke.com/), Lloyd S. Han and [Thomas J.Sargent](http://www.tomsargent.com/), you could find the latest draft [here](https://larspeterhansen.org/research/papers/). The notebook presents the code, table and figures accompanying section 6 in the paper\n",
+    "by [Lars Peter Hansen](https://larspeterhansen.org/), [Bálint Szőke](https://www.balintszoke.com/), Lloyd S. Han and [Thomas J.Sargent](http://www.tomsargent.com/), you could find the latest draft [here](https://larspeterhansen.org/research/papers/). \n",
     "\n",
-    "We illustrate effects of concerns about robustness in three environments using a model of capital accumulation with adjustment costs proposed by [Eberly & Wang (2011)](https://www0.gsb.columbia.edu/faculty/nwang/papers/EberlyWang2011_04v3.pdf). We modify their model to expose investment returns  to long-run risks and make investors concerned  about misspecifications of them. Three distinct example economies environments feature:\n",
-    "* a single capital stock\n",
-    "* two capital stocks with a common exposure to long-run risk\n",
-    "*  two capital stocks with only one being exposed to long-run risk"
+    "Notebook by Jiaming Wang\n",
+    "\n",
+    "The notebook presents interactive figures accompanying the paper to help readers better understand our paper. "
    ]
   },
   {
@@ -28,8 +27,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:20:45.817185Z",
-     "start_time": "2020-01-17T07:20:42.886979Z"
+     "end_time": "2020-01-18T08:35:26.369440Z",
+     "start_time": "2020-01-18T08:35:24.109317Z"
     }
    },
    "outputs": [],
@@ -157,8 +156,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:20:47.732043Z",
-     "start_time": "2020-01-17T07:20:45.819131Z"
+     "end_time": "2020-01-18T08:35:28.447993Z",
+     "start_time": "2020-01-18T08:35:26.371378Z"
     }
    },
    "outputs": [],
@@ -208,8 +207,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:20:50.864668Z",
-     "start_time": "2020-01-17T07:20:47.737031Z"
+     "end_time": "2020-01-18T08:35:31.241659Z",
+     "start_time": "2020-01-18T08:35:28.450997Z"
     },
     "scrolled": false
    },
@@ -441,7 +440,9 @@
    "source": [
     "### Figure 3: Examples of twisting functions  $\\xi^{[\\kappa]}$ and $\\xi^{[\\beta]}$ \n",
     "\n",
-    "Figure 3 demonstrates twisting functions $\\xi^{[\\kappa]}$ and $\\xi^{[\\beta]}$ associated with worrisome $(\\widetilde{\\alpha}_z, \\widetilde{\\kappa})=(-.002, .005)$ and $(\\widetilde{\\alpha}_z, \\widetilde{\\beta})=(-.002, 1.215 )$, respectively. Dashed horizontal line shows the state-independent part of the twisting function, while the dotted horizontal line denotes relative entropy of the induce worst-case models with $\\mathsf{q}=.2$."
+    "Figure 3 demonstrates twisting functions $\\xi^{[\\kappa]}$ and $\\xi^{[\\beta]}$ associated with worrisome $(\\widetilde{\\alpha}_z, \\widetilde{\\kappa})=(-.002, .005)$ and $(\\widetilde{\\alpha}_z, \\widetilde{\\beta})=(-.002, 1.215 )$, respectively. Dashed horizontal line shows the state-independent part of the twisting function, while the dotted horizontal line denotes relative entropy of the induce worst-case models with $\\mathsf{q}=.2$.\n",
+    "\n",
+    "__Toggle the slider__ to see how twisting function $\\xi^{[\\kappa]}$ and $\\xi^{[\\beta]}$ changes. For each $\\tilde{\\kappa}$, we derived a $\\xi^{[\\kappa]}$ and a corresponding $\\xi^{[\\beta]}$ fixing entropy $\\mathsf{q}=.2$ and $\\xi_0$ (constant in twisting function)."
    ]
   },
   {
@@ -449,14 +450,16 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:20:51.529887Z",
-     "start_time": "2020-01-17T07:20:50.866662Z"
+     "end_time": "2020-01-18T08:35:31.746943Z",
+     "start_time": "2020-01-18T08:35:31.242732Z"
     },
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "Figure3()"
+    "from figs_utils_new import *\n",
+    "p = plottingmodule()\n",
+    "p.twisting_plot()"
    ]
   },
   {
@@ -654,7 +657,7 @@
     "* <font color='blue'>Dotted:</font> with robust controls using the worst-case state evolution. \n",
     "* <font color='green'>Dash-dotted:</font>denotes the worst-case mean of $Z$ in the single capital economy. \n",
     "\n",
-    "Thin dashed lines show median values of the states under the baseline model with robust controls."
+    "__Toggle the slider or hit the play button__ to see how $d^*_1$ and stationary distribution alter as $\\tilde{\\kappa}$ change"
    ]
   },
   {
@@ -662,8 +665,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:20:55.867286Z",
-     "start_time": "2020-01-17T07:20:51.531883Z"
+     "end_time": "2020-01-18T08:35:35.612126Z",
+     "start_time": "2020-01-18T08:35:31.748974Z"
     }
    },
    "outputs": [],
@@ -689,15 +692,15 @@
     "\n",
     "*Left panel*: Optimal investment ratio as a function of the allocation of capital.\n",
     "\n",
-    "*Right panel*: stationary distributions (marginals and $90%$ ''confidence sets'') for the states $(R, Z)$ under three scenarios: \n",
+    "*Right panel*: stationary distributions (marginals and $90%$ __confidence sets__) for the states $(R, Z)$ under three scenarios: \n",
     "* __Solid__: with non-robust controls using the baseline state evolution, \n",
     "* <font color='red'>Dashed:</font> with robust controls using the baseline state evolution, \n",
     "* <font color='blue'>Dotted:</font> with robust controls using the worst-case state evolution. \n",
     "* <font color='green'>Dash-dotted:</font>denotes the worst-case mean of $Z$ in the single capital economy. \n",
     "\n",
-    "Thin dashed lines show median values of the states under the baseline model with robust controls.\n",
+    "Shaded areas on the left panel show inter-decile ranges for the stationary distributions of $Z$ under the baseline model with the thin dash-dotted line denoting the $.9$ decile.\n",
     "\n",
-    "Shaded areas on the left panel show inter-decile ranges for the stationary distributions of $Z$ under the baseline model with the thin dash-dotted line denoting the $.9$ decile."
+    "__Toggle the slider or hit the play button__ to see how $d^*_1$ and stationary distribution alter as $\\tilde{\\beta}$ change"
    ]
   },
   {
@@ -705,8 +708,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:20:59.204977Z",
-     "start_time": "2020-01-17T07:20:55.869281Z"
+     "end_time": "2020-01-18T08:35:38.614519Z",
+     "start_time": "2020-01-18T08:35:35.614121Z"
     },
     "scrolled": false
    },
@@ -743,7 +746,9 @@
     "* <font color='red'>Dashed:</font> with robust controls using the baseline state evolution, \n",
     "* <font color='blue'>Dotted:</font> with robust controls using the worst-case state evolution. \n",
     "\n",
-    "The size of the shock is $\\mathsf{w}=[0, 1, 0]'$. The initial $R_0$ is set at the median of the stationary distributions of $R$ under the baseline model. In all cases, $Z_0= \\bar{z}$. For explanation of the different colors see the caption of Figure 4"
+    "The size of the shock is $\\mathsf{w}=[0, 1, 0]'$. The initial $R_0$ is set at the median of the stationary distributions of $R$ under the baseline model. In all cases, $Z_0= \\bar{z}$. \n",
+    "\n",
+    "__Toggle the slider__ to see how  Impulse response functions (IRFs) of $R$ to the second idiosyncratic shock change as $\\tilde{\\kappa}$ (symmetric returns) and $\\tilde{\\beta}$ (asymmetric returns) change"
    ]
   },
   {
@@ -751,13 +756,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:21:09.663003Z",
-     "start_time": "2020-01-17T07:20:59.207967Z"
+     "end_time": "2020-01-18T08:35:41.105284Z",
+     "start_time": "2020-01-18T08:35:38.616513Z"
     }
    },
    "outputs": [],
    "source": [
-    "Figure5()"
+    "f5_l = p.sym_r_irf_plot()\n",
+    "f5_r = p.asym_r_irf_plot()\n",
+    "display(widgets.HBox([f5_l,f5_r]))"
    ]
   },
   {
@@ -766,7 +773,9 @@
    "source": [
     "#### Figure 7: Drift of Long run risk state and IRFs of Z\n",
     "\n",
-    "The worst-case model makes  the drift of $R$ become $Z$ dependent.  In addition, under the household's __ex post__ Bayesian belief, the long-run risk state is no longer exogenous. Instead, as depicted by the left panel of Figure 7, the robust household expects  larger falls in $Z$ when  holdings more of the  $Z$-exposed asset. The right panel of Figure 7 (accompanied with the right panel of Figure 5) illustrates how such beliefs affect the perceived impulse response of  the long-run risk state to an idiosyncratic capital shock: (1) for short horizons, the positive response appears *less* persistent than it is under the baseline model;  and (2) for longer horizons, the effect becomes negative temporarily."
+    "The worst-case model makes  the drift of $R$ become $Z$ dependent.  In addition, under the household's __ex post__ Bayesian belief, the long-run risk state is no longer exogenous. Instead, as depicted by the left panel of Figure 7, the robust household expects  larger falls in $Z$ when  holdings more of the  $Z$-exposed asset. The right panel of Figure 7 (accompanied with the right panel of Figure 5) illustrates how such beliefs affect the perceived impulse response of  the long-run risk state to an idiosyncratic capital shock: (1) for short horizons, the positive response appears *less* persistent than it is under the baseline model;  and (2) for longer horizons, the effect becomes negative temporarily.\n",
+    "\n",
+    "__Toggle the slider__ to see how long run risk drifts and Impulse response functions (IRFs) to the second idiosyncratic shock change as $\\tilde{\\beta}$ changes."
    ]
   },
   {
@@ -774,13 +783,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:21:14.436237Z",
-     "start_time": "2020-01-17T07:21:09.666993Z"
+     "end_time": "2020-01-18T08:35:44.836632Z",
+     "start_time": "2020-01-18T08:35:41.107304Z"
     }
    },
    "outputs": [],
    "source": [
-    "Figure7()"
+    "p.Z_plot()"
    ]
   },
   {
@@ -829,8 +838,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:21:15.172296Z",
-     "start_time": "2020-01-17T07:21:14.439266Z"
+     "end_time": "2020-01-18T08:35:45.466808Z",
+     "start_time": "2020-01-18T08:35:44.836632Z"
     },
     "scrolled": false
    },
@@ -878,13 +887,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-17T07:21:17.019334Z",
-     "start_time": "2020-01-17T07:21:15.174265Z"
+     "end_time": "2020-01-18T08:35:45.826988Z",
+     "start_time": "2020-01-18T08:35:45.466808Z"
     }
    },
    "outputs": [],
    "source": [
-    "Figure9()"
+    "p.shockplot()"
    ]
   },
   {
@@ -926,7 +935,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "260.333px"
+    "width": "260.323px"
    },
    "toc_section_display": true,
    "toc_window_display": true
