--- a/single_capital.ipynb
+++ b/single_capital.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Twisted Probabilities, Uncerntainty, and Prices\n",
+    "# Twisted Probabilities, Uncertainty, and Prices\n",
     "by [Lars Peter Hansen](https://larspeterhansen.org/), [Bálint Szőke](https://www.balintszoke.com/), Lloyd S. Han and [Thomas J.Sargent](http://www.tomsargent.com/), you could find the latest draft [here](https://larspeterhansen.org/research/papers/). \n",
     "\n",
     "We illustrate effects of concerns about robustness in three environments using a model of capital accumulation with adjustment costs proposed by [Eberly & Wang (2011)](https://www0.gsb.columbia.edu/faculty/nwang/papers/EberlyWang2011_04v3.pdf). We modify their model to expose investment returns  to long-run risks and make investors concerned  about misspecifications of them. Three distinct example economies environments feature:\n",
@@ -27,51 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-06T15:52:48.163000-06:00",
      "start_time": "2020-01-06T21:52:41.881Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Project.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Project.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Project.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Project.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n",
-      "\u001b[32m\u001b[1m  Updating\u001b[22m\u001b[39m `~/.julia/environments/v1.3/Manifest.toml`\n",
-      "\u001b[90m [no changes]\u001b[39m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "shock_price (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install and import Necessary packages\n",
     "using Pkg\n",
@@ -158,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-06T15:52:36.972000-06:00",
@@ -433,9 +396,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 0.6.2",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-0.6"
   },
   "language_info": {
    "file_extension": ".jl",
@@ -487,5 +450,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
