--- a/two_capitals.ipynb
+++ b/two_capitals.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Twisted Probabilities, Uncerntainty, and Prices\n",
+    "# Twisted Probabilities, Uncertainty, and Prices\n",
     "by [Lars Peter Hansen](https://larspeterhansen.org/), [Bálint Szőke](https://www.balintszoke.com/), Lloyd S. Han and [Thomas J.Sargent](http://www.tomsargent.com/), you could find the latest draft [here](https://larspeterhansen.org/research/papers/). \n",
     "\n",
     "We illustrate effects of concerns about robustness in three environments using a model of capital accumulation with adjustment costs proposed by [Eberly & Wang (2011)](https://www0.gsb.columbia.edu/faculty/nwang/papers/EberlyWang2011_04v3.pdf). We modify their model to expose investment returns  to long-run risks and make investors concerned  about misspecifications of them. Three distinct example economies environments feature:\n",
@@ -1024,9 +1024,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.3.1",
+   "display_name": "Julia 0.6.2",
    "language": "julia",
-   "name": "julia-1.3"
+   "name": "julia-0.6"
   },
   "language_info": {
    "file_extension": ".jl",
@@ -1078,5 +1078,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
