Realign text to html format

--- a/single_capital.ipynb
+++ b/single_capital.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "### Setup\n",
     "\n",
-    "Aggregate output is proportional to a single capital stock with a constant productivity parameter $\\mathcal{A}$. A representative household cares about consumption $C$ with instantaneous utility $\\delta\\log C$. Under the baseline model, investment $I$ affects capital $K$ according to\n",
+    "<p style='text-align: justify;'>Aggregate output is proportional to a single capital stock with a constant productivity parameter $\\mathcal{A}$. A representative household cares about consumption $C$ with instantaneous utility $\\delta\\log C$. Under the baseline model, investment $I$ affects capital $K$ according to</p>\n",
     "\n",
     "\\begin{align}\n",
     "dK_t &= \\left[\\frac{I_t}{K_t} - \\frac{\\phi}{2}\\left(\\frac{I_t}{K_t}\\right)^2 + (.01)\\left(\\widehat \\alpha_k + \\widehat \\beta Z_t \\right)\\right]K_t dt + (.01)\\sigma_k K_t\\cdot dW_t \\label{eqn:model}\\\\\n",
@@ -70,13 +70,16 @@
     "\\tag{1}\n",
     "\\end{align}\n",
     "\n",
-    "with adjustment cost parameter $\\phi$. With zero investment, the rate of change of capital is $(.01)\\left(\\widehat\\alpha_k + \\widehat\\beta Z_t\\right)$, where $Z$ is an exogenously specified continuous-time scalar autoregressive process  that puts long-term risks into  returns on capital. Under baseline model $(1)$, the mean of $Z$ is  ${\\overline z} = {\\frac {{\\widehat \\alpha}_z} {{\\widehat \\kappa}}}$.\n",
+    "<p style='text-align: justify;'>with adjustment cost parameter $\\phi$. With zero investment, the rate of change of capital is $(.01)\\left(\\widehat\\alpha_k + \\widehat\\beta Z_t\\right)$, where $Z$ is an exogenously specified continuous-time scalar autoregressive process  that puts long-term risks into  returns on capital. Under baseline model $(1)$, the mean of $Z$ is  ${\\overline z} = {\\frac {{\\widehat \\alpha}_z} {{\\widehat \\kappa}}}$.</p>\n",
     "\n",
-    "he aggregate resource constraint is $C + I = {\\cal A} K$. It is convenient to pose a robust planner's problem in terms of an investment-capital ratio $D_t \\doteq\\frac{I_t}{K_t}$ and $\\log K_t$ that satisfy\n",
+    "<p style='text-align: justify;'>he aggregate resource constraint is $C + I = {\\cal A} K$. It is convenient to pose a robust planner's problem in terms of an investment-capital ratio $D_t \\doteq\\frac{I_t}{K_t}$ and $\\log K_t$ that satisfy</p>\n",
+    "\n",
     "\\begin{align*}\n",
     "d \\log K_t = \\left[D_t - \\frac{\\phi}{2}\\left(D_t\\right)^2 + (.01)\\left(\\widehat \\alpha_k + \\widehat \\beta Z_t \\right) - {\\frac {(.01)^2 |\\sigma_k|^2}{2}} \\right] dt + (.01)\\sigma_k \\cdot dW_t.\n",
     "\\end{align*}\n",
+    "\n",
     "Denote state variable as $X_t = [\\log K_t,\\ Z_t]'$ and instantaneous utility function\n",
+    "\n",
     "\\begin{align*}\n",
     "\\upsilon(X_t, D_t) = \\delta\\log\\left({\\mathcal A}- D_t\\right) + \\delta\\log K_t.\n",
     "\\end{align*}\n",
@@ -94,17 +97,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The basis of our quantitative analysis is an empirical model of  aggregate consumption dynamics. Our code for VAR estimation could be found in __VAR Estimation__ section of Git hub repository [Tenuous Belief](https://github.com/lphansen/TenuousBeliefs).\n",
+    "<p style='text-align: justify;'>The basis of our quantitative analysis is an empirical model of  aggregate consumption dynamics. Our code for VAR estimation could be found in <em><b>VAR Estimation</b></em> section of Git hub repository <a href=\"https://github.com/lphansen/TenuousBeliefs\">Tenuous Belief</a>.</p>\n",
     "\n",
-    "We follow [Hansen et al. (2008)](http://larspeterhansen.org/wp-content/uploads/2016/10/Consumption-Strikes-Back-Measuring-Long-Run-Risk.pdf) by fitting a trivariate VAR for macroeconomic time series that contain information about long-term consumption growth, namely,\n",
+    "<p style='text-align: justify;'>We follow <a href = \"http://larspeterhansen.org/wp-content/uploads/2016/10/Consumption-Strikes-Back-Measuring-Long-Run-Risk.pdf\">Hansen et al. (2008) </a> by fitting a trivariate VAR for macroeconomic time series that contain information about long-term consumption growth, namely,\n",
     "log consumption growth, the difference between logs of business income and consumption, and the difference between logs of personal dividend income and\n",
-    "consumption.\n",
+    "consumption.</p>\n",
     "\n",
-    "The time series are quarterly data from 1948 Q1 to 2018 Q2. Our consumption measure is per capita consumption of non-durables and services from NIPA Table 1.1.5. Business income is measured as proprietor's income plus corporate profits per capita and the series are from NIPA Table 1.12. Personal dividend income is from NIPA Table 2.1. By including proprietors' income in addition to corporate profits, we use a broader measure of business income than [Hansen et al. (2008)](http://larspeterhansen.org/wp-content/uploads/2016/10/Consumption-Strikes-Back-Measuring-Long-Run-Risk.pdf), who used only corporate profits. Moreover, [Hansen et al. (2008)](http://larspeterhansen.org/wp-content/uploads/2016/10/Consumption-Strikes-Back-Measuring-Long-Run-Risk.pdf) did not include  personal dividends in their VAR analysis.\n",
-    "We restrict  all three time series to have a common martingale component by imposing a known cointegration relation among them.\n",
+    "<p style='text-align: justify;'>The time series are quarterly data from 1948 Q1 to 2018 Q2. Our consumption measure is per capita consumption of non-durables and services from NIPA Table 1.1.5. Business income is measured as proprietor's income plus corporate profits per capita and the series are from NIPA Table 1.12. Personal dividend income is from NIPA Table 2.1. By including proprietors' income in addition to corporate profits, we use a broader measure of business income than <a href = \"http://larspeterhansen.org/wp-content/uploads/2016/10/Consumption-Strikes-Back-Measuring-Long-Run-Risk.pdf\">Hansen et al. (2008) </a> , who used only corporate profits. Moreover, <a href = \"http://larspeterhansen.org/wp-content/uploads/2016/10/Consumption-Strikes-Back-Measuring-Long-Run-Risk.pdf\">Hansen et al. (2008) </a>  did not include  personal dividends in their VAR analysis.\n",
+    "We restrict  all three time series to have a common martingale component by imposing a known cointegration relation among them.</p>\n",
     "\n",
-    "We convert the discrete time VAR estimates to baseline parameters $({\\widehat \\alpha}_k,  {\\widehat \\beta}, {\\widehat \\alpha}_z, {\\widehat \\kappa} )$ and $(\\sigma_c, \\sigma_z)$ by setting ${\\widehat \\alpha}_z=0$ and $\\widehat{\\beta}=1$ and matching the dynamics of the VAR implied long-term consumption growth forecast with those of $Z$.\n",
-    "As a result, we obtain the following parameters for the baseline model of consumption $(1)$:\n",
+    "<p style='text-align: justify;'>We convert the discrete time VAR estimates to baseline parameters $({\\widehat \\alpha}_k,  {\\widehat \\beta}, {\\widehat \\alpha}_z, {\\widehat \\kappa} )$ and $(\\sigma_c, \\sigma_z)$ by setting ${\\widehat \\alpha}_z=0$ and $\\widehat{\\beta}=1$ and matching the dynamics of the VAR implied long-term consumption growth forecast with those of $Z$.\n",
+    "As a result, we obtain the following parameters for the baseline model of consumption $(1)$:</p>\n",
     "\n",
     "\\begin{align} \n",
     "& \\begin{matrix}\n",
@@ -112,11 +115,12 @@
     "{\\widehat \\alpha}_z  &= & 0 &  & {\\widehat \\kappa} & = & .014 \\end{matrix} \\cr\n",
     "& \\sigma = \\begin{bmatrix}\n",
     "(\\sigma_c)' \\cr (\\sigma_z)' \\end{bmatrix}  =  \\begin{bmatrix} .477 & 0 \\cr  .011 & .025 \\end{bmatrix} .\n",
+    "\\label{estimations}\n",
     "\\end{align}\n",
     "\n",
     "We set the household's subjective discount rate equal to $\\delta=.002.$\n",
     "\n",
-    "In more detail, we choose $\\widehat{\\alpha}_c$ and $(1-\\widehat{\\kappa})$ to match the VAR implied unconditional mean of consumption growth and autoregressive coefficient of expected long-term consumption growth, respectively. In addition, we set $(\\sigma_c, \\sigma_z)$ such that $(1, \\widehat{\\kappa}^{-1})\\sigma\\sigma'(1, \\widehat{\\kappa}^{-1})'$ is equal to the VAR implied covariance matrix of the one-step-ahead forecast error for consumption growth and expected long-term consumption growth. We achieve identification by imposing a lower triangular structure with positive diagonal elements on $\\sigma$."
+    "<p style='text-align: justify;'>In more detail, we choose $\\widehat{\\alpha}_c$ and $(1-\\widehat{\\kappa})$ to match the VAR implied unconditional mean of consumption growth and autoregressive coefficient of expected long-term consumption growth, respectively. In addition, we set $(\\sigma_c, \\sigma_z)$ such that $(1, \\widehat{\\kappa}^{-1})\\sigma\\sigma'(1, \\widehat{\\kappa}^{-1})'$ is equal to the VAR implied covariance matrix of the one-step-ahead forecast error for consumption growth and expected long-term consumption growth. We achieve identification by imposing a lower triangular structure with positive diagonal elements on $\\sigma$.</p>"
    ]
   },
   {
@@ -172,7 +176,7 @@
     "dW_t = H_t dt + d{W}_t^H,\n",
     "\\end{equation}\n",
     "\n",
-    "Uncertainty about $(\\alpha_k,\\beta)$ describes unknown components in  returns to investment while uncertainty about $(\\alpha_z,\\kappa)$ captures an unknown growth evolution process. We represent a model of the form $(2)$ by restricting the drift distortion $H$ for $W$ to satisfy\n",
+    "<p style='text-align: justify;'>Uncertainty about $(\\alpha_k,\\beta)$ describes unknown components in  returns to investment while uncertainty about $(\\alpha_z,\\kappa)$ captures an unknown growth evolution process. We represent a model of the form $(2)$ by restricting the drift distortion $H$ for $W$ to satisfy</p>\n",
     "\n",
     "\\begin{equation}\\label{eq:affine_drift}\n",
     "H_t = \\eta(X_t) \\doteq {\\eta }_0  + {\\eta }_1 Z_t\n",
@@ -198,18 +202,18 @@
    "source": [
     "### Planner's Problem\n",
     "\n",
-    "To capture a desire for robustness to parametric misspecifications represented by the class $(2)$, we suppose that the twisting function has the form $(4)$ and seek a function $V(z, k; \\ell) = \\log k + \\nu(z; \\ell)$ that satisfies the robust planner's HJB equation\n",
-    "\\begin{align}\\label{hjb:robust}\n",
+    "<p style='text-align: justify;'>To capture a desire for robustness to parametric misspecifications represented by the class $(2)$, we suppose that the twisting function has the form section and seek a function $V(z, k; \\ell) = \\log k + \\nu(z; \\ell)$ that satisfies the robust planner's HJB equation</p>\n",
+    "\\begin{align}\n",
     "0 = & \\max_{d} \\min_{h} \\ \\ - \\delta \\nu(z; \\ell) + \\delta \\log ({\\mathcal A} - d) + \\left[d - {\\frac {\\phi} 2} d^2 +  (.01) \\left({\\widehat \\alpha}_k + {\\widehat \\beta} z - \\frac{(.01)|\\sigma_k^2|}{2}\\right)\\right] \\cr\n",
     "& \\quad\\quad + \\frac{\\partial \\nu(z; \\ell)}{ \\partial z}\\left( {\\widehat \\alpha}_z -{\\widehat \\kappa} z \\right) + \\frac{1}{2}\\frac{ \\partial^2 \\nu(z; \\ell)}{\\partial z^2} |\\sigma_z|^2 \\nonumber \\\\\n",
     "& \\quad\\quad + (.01) \\left[\\sigma_k \\cdot h\\right] + \\frac{\\partial \\nu(z; \\ell)}{\\partial z}\\left[\\sigma_z \\cdot h\\right]  +  \\frac{\\ell}{2}\\left[ |h|^2 - \\xi(z) \\right].\n",
-    "\\tag{5}\n",
+    "\\tag{4}\n",
     "\\end{align}\n",
     "\n",
-    "The last line of $(5)$ depicts how concerns about robustness enter the HJB equation via $h$. The minimizing choice of $h$ depends on the state $z$ through the marginal value function:\n",
+    "<p style='text-align: justify;'>The last line of $(4)$ depicts how concerns about robustness enter the HJB equation via $h$. The minimizing choice of $h$ depends on the state $z$ through the marginal value function:</p>\n",
     "\n",
     "\\begin{align}\n",
-    "H^*(z; \\ell) & \\doteq \\begin{bmatrix}h^*_k \\\\ h^*_z \\end{bmatrix} = -\\frac{1}{\\ell}\\left[ (.01) \\sigma_k + \\frac{\\partial  \\nu(z ; \\ell)}{\\partial z}\\sigma_z  \\right]. \\tag{6}\n",
+    "H^*(z; \\ell) & \\doteq \\begin{bmatrix}h^*_k \\\\ h^*_z \\end{bmatrix} = -\\frac{1}{\\ell}\\left[ (.01) \\sigma_k + \\frac{\\partial  \\nu(z ; \\ell)}{\\partial z}\\sigma_z  \\right]. \\tag{5}\n",
     "\\end{align}\n",
     "\n",
     "The  maximizing choice of $d$ solves:\n",
@@ -218,8 +222,8 @@
     " 1 - \\phi d^* =   {\\frac \\delta  {{\\mathcal A} - d^*}}\n",
     "\\end{align}\n",
     "\n",
-    "where $d^*$ denotes the chosen investment-capital ratio. Notice that  $d^*$ is constant and does not depend on the underlying state variables, so the optimal consumption-capital ratio $c^*=\\mathcal{A}-d^*$ is also constant. Because neither $c^*$ nor $d^*$ is affected by\n",
-    "robustness concerns,  under the baseline model capital and  consumption dynamics are not altered by robustness concerns. We write the implied dynamics for the logarithm of consumption as:\n",
+    "<p style='text-align: justify;'>where $d^*$ denotes the chosen investment-capital ratio. Notice that  $d^*$ is constant and does not depend on the underlying state variables, so the optimal consumption-capital ratio $c^*=\\mathcal{A}-d^*$ is also constant. Because neither $c^*$ nor $d^*$ is affected by\n",
+    "robustness concerns,  under the baseline model capital and  consumption dynamics are not altered by robustness concerns. We write the implied dynamics for the logarithm of consumption as:</p>\n",
     "\n",
     "\\begin{align}\n",
     "d \\log C_t  = (.01)\\left({\\widehat \\alpha}_c  +  {\\widehat \\beta} Z_t\\right) dt + (.01)\\sigma_c \\cdot dW_t \\label{eq:baseline_consumption}\n",
@@ -396,9 +400,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.2",
+   "display_name": "Julia 1.3.1",
    "language": "julia",
-   "name": "julia-0.6"
+   "name": "julia-1.3"
   },
   "language_info": {
    "file_extension": ".jl",
