--- a/main.ipynb
+++ b/main.ipynb
@@ -91,13 +91,13 @@
     "\\varrho\\left(M^H; \\xi \\mid \\mathcal F_0\\right) \\doteq \\frac{\\delta}{2}E\\left(\\int \\exp(-\\delta \\tau)M^H_{\\tau}[|H_{\\tau}|^2 - \\xi(X_{\\tau})]d\\tau \\mid \\mathcal F_0 \\right).\n",
     "\\end{align}\n",
     "\n",
-    "Properties  that facilitate our analysis are: (i)  $\\varrho$ is convex in $M^H$, (ii) $\\varrho$ can readily be computed.we bound the discrepancy measure $\\varrho$ to define a convex set of martingale processes:\n",
+    "<p style='text-align: justify;'>Properties  that facilitate our analysis are: (i)  $\\varrho$ is convex in $M^H$, (ii) $\\varrho$ can readily be computed.we bound the discrepancy measure $\\varrho$ to define a convex set of martingale processes:</p>\n",
     "\n",
     "\\begin{align}\\tag{4}\n",
     "\\mathcal M(\\xi) \\doteq \\left\\{ M^H\\in \\mathcal M \\ : \\ \\varrho\\left(M^H; \\xi \\mid \\mathcal F_0\\right)\\leq 0\\right\\}\n",
     "\\end{align}\n",
     "\n",
-    "The special case $\\xi(x)=2\\zeta$ implies a constraint on martingales $M^H$ equivalent with $(3)$, so $\\mathcal{M}(\\xi)$ with a constant twisting function can be viewed as a Hansen-Sargent discounted relative entropy ball."
+    "<p style='text-align: justify;'>The special case $\\xi(x)=2\\zeta$ implies a constraint on martingales $M^H$ equivalent with $(3)$, so $\\mathcal{M}(\\xi)$ with a constant twisting function can be viewed as a Hansen-Sargent discounted relative entropy ball.</p>"
    ]
   },
   {
